--- a/style.css
+++ b/style.css
@@ -100,3 +100,32 @@ html {
     background-color: gray;
     color: black;
 }
+
+.logs ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.logs ul li {
+    display: flex;
+    justify-content: center;
+    margin: 4px 0px 4px 0px;
+    padding: 4px;
+    font-weight: 600;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    border-radius: 3px;
+}
+
+.player {
+    background-color: #4253afaa;
+    color: white;
+}
+
+.monster {
+    background-color: #e51c23aa;
+    color: white;
+}
